examples/test/testpolicy422.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy422
  namespace: namespace127
spec:
  podSelector:
    matchLabels:
      key8: value15
      key2: value29
      key49: value4
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key39: value43
          key41: value10
      podSelector:
        matchLabels:
          key13: value26
